# xzatoma

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  PHASE3_COMPLETION_SUMMARY.md  PHASE4_CHECKLIST.md  PHASE4_COMPLETION_SUMMARY.md  PHASE5_CHECKLIST.md  PHASE5_COMPLETION_REPORT.md  PHASE5_COMPLETION_SUMMARY.md  PHASE6_COMPLETION_CHECKLIST.md  PHASE6_IMPLEMENTATION_SUMMARY.md  PHASE6_QUICK_REFERENCE.md  PLAN.md  README.md  openai_openapi.yaml
config/: config.yaml  generic_watcher.yaml  openai_config.yaml  watcher-production.yaml  watcher.yaml
demos/: README.md
demos/chat/: README.md  config-llamacpp.yaml  config.yaml  reset.sh  run.sh  setup.sh
demos/mcp/: README.md  config.yaml  reset.sh  run.sh  setup.sh
demos/run/: README.md  config.yaml  reset.sh  run.sh  setup.sh
demos/skills/: README.md  config.yaml  reset.sh  run.sh  setup.sh
demos/subagents/: README.md  config.yaml  reset.sh  run.sh  setup.sh
demos/vision/: README.md  config.yaml  reset.sh  run.sh  setup.sh
demos/watcher/: README.md  config.yaml  reset.sh  run.sh  setup.sh
demos/zed_acp/: README.md  config.yaml  config_copilot.yaml  config_ollama_vision.yaml  config_openai.yaml  reset.sh  run.sh  setup.sh
docs/: README.md
docs/archive/: README.md  implementation_quickstart_checklist.md
docs/explanation/: acp_implementation_plan.md  acp_phase1_implementation.md  acp_phase2_implementation.md  acp_phase3_implementation.md  acp_phase4_implementation.md  add_safety_features_phase1_implementation.md  agent_skills_implementation.md  agent_skills_implementation_plan.md  agent_skills_phase1_implementation.md  agent_skills_phase2_implementation.md  agent_skills_phase3_implementation.md  agent_skills_phase4_implementation.md  agents_md_update.md  architecture_fixes_applied.md  architecture_validation.md  architecture_validation_status.md  auth_provider_flag_implementation.md  chat_mode_auth_command_implementation.md  chat_mode_provider_display.md  chat_modes_architecture.md  chat_modes_implementation_plan.md  chat_resume_complete_fix.md  codebase_cleanup_plan.md  color_coded_chat_modes_enhancement.md  command_parsing_error_handling_implementation.md  competitive_analysis.md  configuration_defaults_increase.md  context_mention_architecture.md  context_mention_implementation_summary.md  context_window_implementation_plan.md  context_window_management_plan.md  conversation_persistence_implementation.md  conversation_persistence_plan.md  conversation_persistence_test_implementation.md  (+217 more)
examples/: downstream_consumer.rs  quickstart_plan.yaml
scripts/: code_fence_check.py  doc_link_check.py  docs_filename_check.py  emoji_check.py  fix_coming_soon.py  fix_docs_emojis.py
src/: chat_mode.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  mention_parser.rs  security.rs  test_utils.rs
testdata/: llama3.2__model_capabilities.json  models.json  ollama_model_capabilities.json
tests/: acp_cli.rs  acp_core.rs  acp_persistence.rs  acp_phase4_persistence.rs  acp_run_lifecycle.rs  acp_server_discovery.rs  agent_cli.rs  conversation_persistence_integration.rs  copilot_integration.rs  eval_cli_commands.rs  eval_config_validation.rs  eval_mention_parser.rs  eval_run_command.rs  eval_skills_command.rs  integration_history_tool_integrity.rs  integration_parallel.rs  integration_persistence.rs  integration_phase2.rs  integration_phase5.rs  integration_provider_factory.rs  integration_subagent.rs  mcp_auth_discovery_test.rs  mcp_auth_flow_test.rs  mcp_auth_pkce_test.rs  mcp_auth_token_store_test.rs  mcp_client_test.rs  mcp_config_test.rs  mcp_elicitation_test.rs  mcp_http_transport_test.rs  mcp_manager_test.rs  mcp_sampling_test.rs  mcp_stdio_test.rs  mcp_tool_bridge_test.rs  mcp_tool_execution_test.rs  mcp_types_test.rs  models_json_output.rs  skills_activation.rs  skills_cli.rs  skills_config.rs  skills_disclosure.rs  (+7 more)
(+387 files in other folders)
