[package]
name = "xzatoma"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["XZatoma Contributors"]
description = "Autonomous AI agent CLI for task execution through conversation"
license = "MIT"
repository = "https://github.com/xbcsmith/xzatoma"
keywords = ["ai", "agent", "cli", "automation"]
categories = ["command-line-utilities"]

[dependencies]
# CLI and configuration
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Security and credentials
keyring = "2.3"
chrono = { version = "0.4", features = ["serde"] }

# File operations and utilities
walkdir = "2.4"
similar = "2.3"
# Fuzzy matching helpers used for path suggestion and abbreviation resolution
strsim = "0.10"

# Interactive CLI
rustyline = "13.0"

# Terminal colors
colored = "2.1"

# Regex for validation
regex = "1.10"

# Streaming utilities for Kafka consumer
tokio-stream = "0.1"

# Image and metadata utilities
image = "0.25"      # Image decoding for PNG, JPEG, WebP, GIF, BMP, TIFF
base64 = "0.22"     # Base64 encoding for image data

url = "2.5.8"
prettytable-rs = "0.10.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
directories = "6.0.0"
uuid = { version = "1.20.0", features = ["v4", "serde"] }

# Phase 4: Conversation Persistence
sled = "0.34"           # Embedded key-value store for conversation history
ulid = { version = "1.1", features = ["serde"] }  # Sortable unique IDs with serde support

# Phase 5: Metrics and Performance
metrics = "0.21"
metrics-exporter-prometheus = { version = "0.13", optional = true }
glob-match = "0.2.1"

[features]
prometheus = ["metrics-exporter-prometheus"]

[dev-dependencies]
mockall = "0.12"
tempfile = "3.8"
tokio-test = "0.4"
wiremock = "0.5"
assert_cmd = "2.0"
predicates = "3.0"
serial_test = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
